<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/matchMatch_">

    <me.zhanghai.android.materialprogressbar.MaterialProgressBar
        android:id="@+id/progress_countdown"
        style="@style/Widget.MaterialProgressBar.ProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:minWidth="@dimen/_220sdp"
        android:minHeight="@dimen/_250sdp"
        app:mpb_progressBackgroundTint="?attr/colorOnSecondary"
        app:mpb_showProgressBackground="true" />

    <TextView
        android:id="@+id/txt_countdown"
        style="@style/mainTitle_"
        android:layout_centerInParent="true"
        android:fontFamily="@font/nexa_font"
        tools:text="10:00" />

    <LinearLayout
        style="@style/matchWrap_"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/_20sdp">

        <TextView
            style="@style/title_"
            android:text="@string/timer_current_state" />

        <TextView
            android:id="@+id/txt_state"
            style="@style/title_"
            android:layout_margin="@dimen/_2sdp"
            android:text="@string/stopped" />
    </LinearLayout>


    <LinearLayout
        style="@style/matchWrap_"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/_15sdp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/_5sdp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_start"
            style="@style/fabButton_"
            android:contentDescription="@string/start"
            android:src="@drawable/ic_start"
            app:elevation="@dimen/_2sdp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_pause"
            style="@style/fabButton_"
            android:contentDescription="@string/pause"
            android:src="@drawable/ic_pause"
            app:elevation="@dimen/_2sdp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_stop"
            style="@style/fabButton_"
            android:contentDescription="@string/stop"
            android:src="@drawable/ic_stop"
            app:elevation="@dimen/_2sdp" />
    </LinearLayout>

</RelativeLayout>